--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,13 @@ name = "badelf"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "tui"
+path = "src/tui.rs"
+
+[[bin]]
+name = "cli"
+path = "src/cli.rs"
 
 [dependencies]
 clap = { version = "4.4.10", features = ["derive"] }
