--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,12 @@ path = "src/tui.rs"
 name = "cli"
 path = "src/cli.rs"
 
+[profile.release]
+lto=true
+strip=true
+codegen-units = 1
+panic = 'abort'
+
 [dependencies]
 clap = { version = "4.4.10", features = ["derive"] }
 crossterm = "0.27.0"
